version 0.9.6 -- unreleased
    backupninja changes
	fix bug in cstream definition, thanks Jamie McClelland
    handler changes
	dup:
	 . General cleanup
	 . Better support for new duplicity (>= 0.4.4) command line syntax:
	   run remove-older-than when $keep is not set to yes (Closes: #458816),
	   and run "duplicity cleanup" before any other duplicity command; both
	   only trigger a warning on failure, since they should not stop backups
	   from being done. Also migrated full/incremental backup switch to the
	   new syntax.
	ldap:
	 . support HDB backend just as the BDB one, and make message clearer
	   when no supported backend is found (Closes: #476910)
	rdiff:
	 . Fixed ignore_version default value missing
	 . Add patch from Matthew Palmer to rdiff handler to incorporate sshoptions
	   into options via remote-schema not already specified (Closes: #424639)
	wget:
	 . New handler from rhatto designed to incrementally pull content from
	   a website to a local folder, based on the rsync handler
	maildir:
	 . fixed bug where maildirs that start with a number were skipped.
	 . make deleted maildirs record the date they were deleted
	 . add destid_file configuration option to enable you to specify an alternate
	   ssh public key authentication file (defaulting to /root/.ssh/id_rsa)

version 0.9.5 -- December 2, 2007
    backupninja changes
	 . Fixed checks on configuration files permissions, since the patch
	   applied to fix #370396 broke this, especially for configuration files
	   created with permissions 000 by an older ninjahelper version.
	 . Enhanced portability for other platforms
	 . Added quoting because it was needed to prevent shell expansion, broking the
           toint function sometimes (Closes: Trac#11)
	 . Fixed reportspace option (Closes: Trac#10)
	 . Fixed ldap handler not recognizing database suffix (Closes: Trac#28)
    handler changes
	dup:
	 . Support duplicity >= 0.4.3 invocation syntax (--ssh-command option