@@ -26,3 +26,4 @@ Sami Haahtinen <ressu@ressukka.net>
 Matthew Palmer -- mysql enhancements
 romain.tartiere@healthgrid.org -- ldap fixes
 Adam Monsen - spec file updates
+Matthew Palmer <mpalmer@debian.org> -- halt loglevel feature
