@@ -1,6 +1,8 @@
 version 0.9.6 -- unreleased
     backupninja changes
-	fix bug in cstream definition, thanks Jamie McClelland
+	 . fix bug in cstream definition, thanks Jamie McClelland
+	 . Allow the entire backup run to be halted by an action, thanks to
+	   Matthew Palmer (Closes: #455836)
     handler changes
 	dup:
 	 . General cleanup
